--- a/styles.css
+++ b/styles.css
@@ -1,235 +1,233 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;800&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Rubik', sans-serif;
-    color: aliceblue;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Rubik", sans-serif;
+  color: aliceblue;
 }
 
 .row {
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 24px;
+  width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 24px;
 }
 
 .container {
-    padding: 64px 0;
+  padding: 64px 0;
 }
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 a {
-    text-decoration: none;
-    color: #a0a0a0;
+  text-decoration: none;
+  color: #d4d3d3;
 }
 
 button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .brand__color {
-    color: #3e92cc;
+  color: #3e92cc;
 }
 
 .no-drop {
-    cursor: no-drop;
+  cursor: no-drop;
 }
 
 /* HERO IMG */
 
 .hero__img {
-    background-image:linear-gradient(
-        rgba(0, 0, 0, 0.7), 
-        rgba(0, 0, 0, 0.7)),
-        url("./assets/brett-jordan-4Aqnfmlx1EM-unsplash.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.805), rgba(0, 0, 0, 0.7)),
+    url("./assets/brett-jordan-4Aqnfmlx1EM-unsplash.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* NAV */
 
 .nav__row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 0 24px;
-    position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  padding: 0 24px;
+  position: relative;
 }
 
 .logo {
-    color: white;
+  color: white;
+  font-size: 28px;
 }
 
 .nav__link--list {
-    display: flex;
+  display: flex;
 }
 
 .nav__link {
-    padding-right: 24px;
-    font-weight: 500;
-
+  padding-right: 24px;
+  font-weight: 500;
 }
 
 .nav__link--primary-btn {
-    background-color: #3e92cc;
-    padding: 12px 24px;
-    color: white;
-    border-radius: 50px;
-    transition: all 300ms ease;
+  background-color: #3e92cc;
+  padding: 12px 24px;
+  color: white;
+  border-radius: 50px;
+  transition: all 300ms ease;
 }
 
 .nav__link--primary-btn:hover {
-    background-color: #1e1b18;
+  background-color: #1e1b18;
 }
 
 /* MOBILE NAV */
 
 .burger__menu {
-    display: none;
-    font-size: 24px;
+  display: none;
+  font-size: 24px;
 }
 
 .mobile__menu--backdrop {
-    position: absolute;
-    background-color: #242424;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    z-index: 5;
-    display: flex; 
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: all 400ms ease;
+  position: absolute;
+  background-color: #242424;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 400ms ease;
 }
 
 .menu--open .mobile__menu--backdrop {
-    visibility: visible;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
 
 .menu--open {
-    max-height: 100vh;
-    overflow-y: hidden;
+  max-height: 100vh;
+  overflow-y: hidden;
 }
 
 .mobile__menu--close {
-    position: absolute;
-    top: 20px;
-    right: 25px;
-    font-size: 26px;
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  font-size: 26px;
 }
 
 .mobile__nav__links {
-    margin: 80px 0;
-    font-size: 24px
+  margin: 80px 0;
+  font-size: 24px;
 }
 
 .mobile__cta {
-    color: rgb(238, 238, 238) !important;
+  color: rgb(238, 238, 238) !important;
 }
 
 /* SEARCH COMPONENT */
 
 .search__row {
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   padding-bottom: 64px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 64px;
 }
 
 .search__title {
-    font-size: 42px;
-    margin-bottom: 16px;
-    color: white;
+  font-size: 42px;
+  margin-bottom: 16px;
+  color: white;
 }
 
 .search__bar {
-    display: flex;
-    width: 40%;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    
+  display: flex;
+  width: 40%;
+  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 input {
-    width: 100%; 
-    height: 30px;
-    border-radius: 50px;
-    padding: 0 16px;
-    border: 1px solid #f5f5f586;
-    color: black;
-    background-color: white;
+  width: 100%;
+  height: 40px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 0 16px;
+  border: 1px solid #f5f5f586;
+  color: rgb(52, 52, 52);
+  background-color: white;
 }
 
 .search__bar--icon {
-    border: none;
-    background-color: transparent;
-    position: absolute;
-    right: 10px;
-    transition: all 300ms ease;
-    color: rgb(65, 64, 64);
-    cursor: pointer;
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 10px;
+  transition: all 300ms ease;
+  color: rgb(65, 64, 64) !important;
+  cursor: pointer;
 }
 
 .fa-search {
-    color: #000;
+  color: rgb(65, 64, 64) !important;
+  font-size: 18px;
 }
 
 .search__bar--icon:hover {
-    color: #3e92cc;
+  color: #3e92cc ;
 }
 
 /* MOVIES SECTION */
 
 .search__filter {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
 }
 
 .search {
-    font-size: 24px;
-    font-weight: 500;
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
 }
 
-/* .filter {
-    color: rgb(134, 134, 134);
-    padding: 4px 8px;
-} */
-
-
 .movies__section {
-    background-color: #242424;
-    min-height: 100vh;
+  background-color: #0d0c0c;
+  min-height: 100vh;
 }
 
 .movies__list--wrapper {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: start;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: start;
 }
 
-.movies__loading {
+.show__movies .movies__list--wrapper{
+  display: flex !important;
+}
+
+.show__loading--state {
   display: flex;
   align-items: center;
   justify-content: center !important;
@@ -239,125 +237,159 @@ input {
 }
 
 .movies__loading--spinner {
-  display: none !important;
-}  
+    display: none !important;
+}
 
-.movies__loading .movies__loading--spinner {
-  display: block !important;
+.show__loading--state .movies__loading--spinner {
+    display: block !important;
 }
 
 .fa-spinner {
   animation: rotate 800ms infinite ease;
 }
 
-
 @keyframes rotate {
-    0% {
-        transform: rotate(0);
-    }
+  0% {
+    transform: rotate(0);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .movie__wrapper {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% / 4);
-    
+  display: flex;
+  flex-direction: column;
+  width: calc(100% / 4);
+  margin-bottom: 32px;
 }
 
 .movie__card {
-    max-height: 320px;
-    margin: 8px 16px;
-    border-radius: 5px;
-    overflow: hidden;
-    position: relative;
+  max-height: 320px;
+  margin: 8px 16px;
+  border-radius: 5px;
+  overflow: hidden;
+  position: relative;
 }
 
 .card__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #504f4f59;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #504f4f59;
 }
 
 img {
-    width: 100%;
-    height: 100%;
-    transform: scale(1.1);
-    transition: all 300ms ease;
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1);
+  transition: all 500ms ease;
 }
 
 .movie__img--wrapper:hover img {
-    transform: scale(1.2);
+  transform: scale(1.15);
 }
 
 .movie__description {
-    height: 90px;
-    width: 100%;
-    padding: 8px 0 8px 16px;
-    /* background-color: rgb(30, 30, 30);  */
-    /* filter: blur(3px); */
-    display: flex;
-    flex-direction: column;
+  height: 50px;
+  width: 100%;
+  padding: 8px 0 8px 16px;
+  /* background-color: rgb(30, 30, 30);  */
+  /* filter: blur(3px); */
+  display: flex;
+  flex-direction: column;
 }
 
 .name,
 .year {
-    font-size: 14px;
-    padding-bottom: 4px;
-    font-weight: 400;
-    color: rgb(152, 152, 152);
+  font-size: 14px;
+  padding-bottom: 4px;
+  font-weight: 400;
+  color: rgb(201, 200, 200);
 }
 
 /* FOOTER */
 
 #footer {
-    background-color: #000;
+  background-color: #000;
 }
 
 .footer__wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .footer__logo {
-    font-size: 36px;
-    margin-bottom: 24px;
+  font-size: 36px;
+  margin-bottom: 24px;
 }
 
 .footer__content {
-    font-size: 12px;
-    font-weight: 100;
+  font-size: 12px;
+  font-weight: 100;
 }
 
 /* Small screens & mobile devices */
 
 @media only screen and (max-width: 600px) {
-    .burger__menu {
-        display: block;
-    }
+  .logo {
+    font-size: 24px;
+  }
 
-    .nav__link--list {
-        display: none;
-    }
+  .burger__menu {
+    display: block;
+  }
 
-    .search__title {
-        font-size: 38px;
-        text-align: center;
-    }
+  .nav__link--list {
+    display: none;
+  }
 
-    .search__bar {
-        width: 70%;
-    }
+  .search__title {
+    font-size: 38px;
+    text-align: center;
+  }
 
-    .movie__wrapper {
-        width: calc(100% / 2);
-    }
+  .search__bar {
+    width: 80%;
+  }
+
+  .movie__wrapper {
+    width: calc(100% / 2);
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .burger__menu {
+    display: block;
+  }
+
+  .nav__link--list {
+    display: none;
+  }
+
+  .search__title {
+    font-size: 38px;
+    text-align: center;
+  }
+
+  input {
+    font-size: 14px
+  }
+
+  .font-size {
+    font-size: 18px;
+  }
+
+  .movie__wrapper {
+    width: calc(100% / 1);
+  }
+
+  .movie__card {
+    max-height: 550px;
+  }
 }
